<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <LinearLayout
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/startGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="startGame"
            android:text="@string/start_game_text" />

        <Button
            android:id="@+id/loadGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="loadGame"
            android:text="@string/load_game_text" />

        <Button
            android:id="@+id/exitGameButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/exit_game_text" />
    </LinearLayout>
</RelativeLayout>